fix design for filemanager (still present but not visible directly)

--- a/pompadour_wiki/media/static/less/pompadour.less
+++ b/pompadour_wiki/media/static/less/pompadour.less
@@ -73,6 +73,34 @@ hr {
     }
 }
 
+.wiki-buttonbox {
+    text-align: center;
+    margin-bottom: 5px;
+
+    .btn {
+        margin: 5px;
+    }
+}
+
+.filemanager-thumbnail {
+    max-width: 75px;
+
+    p {
+        text-align: center;
+        word-wrap: break-word;
+    }
+
+    .filemanager-file {
+        margin-top: -14px;
+
+        form.filemanager-selected {
+            display: inline;
+            position: relative;
+            bottom: -14px;
+        }
+    }
+}
+
 #edit-preview {
     border: 1px solid @bordercol;
     padding: 10px;
